own box  layout issue fixed

--- a/assets/section-own-box-page.css
+++ b/assets/section-own-box-page.css
@@ -1,9 +1,7 @@
 .main-wrapper{
     display: flex;
 }
-.main-wrapper .accordian{
-    /* display: none; */
-}
+
 .tab,.add-btn{
     color: #fff;
     background-color: var(--color-pincode-validator);
